--- a/src/Styles/projects.css
+++ b/src/Styles/projects.css
@@ -106,6 +106,7 @@
 
 .projects .two-lines-second span:nth-child(2) {
   color: var(--fire-engine);
+  padding-right: 0px;
 }
 
 .projects .two-lines-second span:nth-child(3) {
